fix vertical spacing for filter text

--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -377,3 +377,10 @@ i.waves-input-wrapper.input-form-submit {
      transition: all 2s ease-in;
   }
 }
+
+.views-bulk-form-count {
+  p {
+    margin:0;
+    line-height: 40px;
+  }
+}
